# Stocks

./: .gitignore  CMakeLists.txt  latex-code.sh  library.h
include/: benchmark.h  concurrent_trading.h  json.h  representation.h  stochastic_oscillator.h  stock_file_reader.h  trading.h  types.h  utility.h
resources/: test_1.json  test_2.json
src/: CMakeLists.txt  concurrent_trading_test.cpp  file_reader_test.cpp  json_test.cpp  representation_test.cpp  stochastic_oscillator_test.cpp  trading_test.cpp
